<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtAddress"
        android:enabled="true"
        android:layout_alignWithParentIfMissing="false"
        android:autoLink="web"
        android:inputType="textUri|text"
        android:clickable="true"
        android:editable="false"
        android:background="@drawable/edittextstyle"
        android:maxHeight="100dp"
        android:maxLength="100"
        android:maxWidth="100dp"
        android:maxLines="1"
        android:hint="@string/telnet_hintAddress"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtPort"
        android:background="@drawable/edittextstyle"
        android:ellipsize="start"
        android:gravity="center"
        android:hint="@string/telnet_hintPort"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telnet_btnConnect"
        android:id="@+id/button"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@+id/txtPort"
        android:layout_alignRight="@+id/relativeLayoutSend"
        android:layout_alignEnd="@+id/relativeLayoutSend"
        android:onClick="btnConnect_onClick" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_fieldset_background"
        android:orientation="vertical"
        android:layout_alignWithParentIfMissing="true"
        android:id="@+id/relativeLayoutSend"
        android:weightSum="1"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="26dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relativeLayoutSend_btnInvia"
            android:id="@+id/btnSend"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/txtSend"
            android:layout_toEndOf="@+id/txtSend"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:onClick="btnSend_onClick" />

        <EditText
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtSend"
            android:layout_alignBottom="@+id/btnSend"
            android:layout_alignParentLeft="true"
            android:hint="@string/relativeLayoutSend_hintCommand"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_fieldset_background"
        android:orientation="vertical"
        android:layout_alignWithParentIfMissing="true"
        android:id="@+id/relativeLayoutReceive"
        android:layout_marginTop="89dp"
        android:weightSum="1"
        android:layout_below="@+id/relativeLayoutSend"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtReceive"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relativeLayoutReceive_Name"
        android:id="@+id/textView2"
        android:textSize="20dp"
        android:textStyle="bold"
        android:singleLine="false"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relativeLayoutSend_Name"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:textStyle="bold"
        android:singleLine="false"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp" />

</RelativeLayout>
